# window-dock

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/common/: buildnumber.cmake  helpers_common.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  ko-KR.ini  pl-PL.ini  zh-CN.ini
resources/: resources.qrc
src/: plugin-main.c  plugin-main.cpp  plugin-main.hpp  plugin-support.c.in  plugin-support.h  window-dock-ui.cpp  window-dock-ui.hpp
